--- a/public/themes/admin_simpleboot3/portal/admin_video/edit.html
+++ b/public/themes/admin_simpleboot3/portal/admin_video/edit.html
@@ -71,6 +71,22 @@
                         <th></th>
                         <td style="color: red">备注:请上传视频格式为mp4,avi,wmv,rm,rmvb,mkv且小于20MB的视频文件（请确认视频编码为H.264） </td>
                     </tr>
+                    <tr>
+                        <th>视频封面</th>
+                        <td>
+                            <div>
+                                <input type="hidden" name="photos" class="form-control"
+                                       id="js-thumbnail-input" value="{:cmf_get_image_url($post.photos)}">
+                                <div>
+                                    <a href="javascript:uploadOneImage('图片上传','#js-thumbnail-input');">
+                                        <img src="__TMPL__/public/assets/images/default-thumbnail.png"
+                                             id="js-thumbnail-input-preview"
+                                             width="135" style="cursor: pointer"/>
+                                    </a>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
                 </table>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
