--- a/public/themes/simpleboot3/portal/ramlist/index.html
+++ b/public/themes/simpleboot3/portal/ramlist/index.html
@@ -7,29 +7,93 @@
 <body>
 <include file="public@nav"/>
 
-<div class="banner df jc ov">
-    <img src="images/subban1.png" alt="" />
-</div>
+<!--<div class="banner df jc ov">-->
+    <!--<img src="images/subban1.png" alt="" />-->
+<!--</div>-->
 
+<!--<div class="content flex1">-->
+    <!--<div class="inner">-->
+        <!--<div class="msba">-->
+            <!--分类：-->
+            <!--<a href="#" class="cur" >全部分类</a>-->
+            <!--<foreach name="cate" item="vo">-->
+                <!--<a href="#" class="" >{$vo.name}</a>-->
+            <!--</foreach>-->
+        <!--</div>-->
+        <!--<div class="msba">-->
+            <!--排序：-->
+            <!--<a href="#" class="cur" >总人气   </a>-->
+            <!--<a href="#" class="" >浏览量   </a>-->
+            <!--<a href="#" class="" >收藏数   </a>-->
+            <!--<a href="#" class="" >推荐数   </a>-->
+        <!--</div>-->
+        <!--<div class="cl h15"></div>-->
+        <!--<div class="lostxbo lostxbosm">-->
+
+            <!--<div class="sgihmtan">-->
+                <!--<ul>-->
+                    <!--<foreach name="ramble" item="vo">-->
+                    <!--<li>-->
+                        <!--<div class="datls">{$vo.title}</div>-->
+                        <!--<div class="df">-->
+                            <!--<div class="zuodat">-->
+                                <!--<img src="images/shi3.png" alt="" />-->
+                            <!--</div>-->
+                            <!--<div class="youwnkw dc js">-->
+                                <!--<div class="dwyonrs">-->
+                                    <!--{$vo.outline}-->
+                                <!--</div>-->
+                                <!--<a href="{:cmf_url('portal/Ramble/index',array('id'=>$vo['id']))}" class="dwnnru flex1" >阅读全文»</a>-->
+
+                                <!--<div class="co666">-->
+                                    <!--分类： <span class="lan">{$vo.name} </span>-->
+                                    <!--<br>发布于 {:date('Y-m-d H:i',$vo['published_time'])} 人气: {$vo.post_like}-->
+                                <!--</div>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                    <!--</li>-->
+                    <!--</foreach>-->
+                <!--</ul>-->
+            <!--</div>-->
+        <!--</div>-->
+        <!--<div class="cl h33"></div>-->
+        <!--<div class="oages df ac js">-->
+            <!--<a href="#" class="fema cur" ><em class="">< </em> 上一页 </a>-->
+            <!--<span class="">-->
+					<!--<a href="#" class="pagesa cur" >1</a>-->
+					<!--<a href="#" class="pagesa" >2</a>-->
+					<!--<a href="#" class="pagesa" >3</a>-->
+					<!--<a href="#" class="pagesa" >4</a>-->
+					<!--<a href="#" class="pagesa" >5</a>-->
+					<!--<a href="#" class="pagesa" >6</a>-->
+					<!--<a href="#" class="pagesa" >7</a>-->
+				<!--</span>-->
+            <!--<a href="#" class="fema" > 下一页 <em class="">></em></a>-->
+        <!--</div>-->
+        <!--<div class="cl h33"></div>-->
+    <!--</div>-->
+<!--</div>-->
 <div class="content flex1">
     <div class="inner">
         <div class="msba">
             分类：
-            <a href="#" class="cur" >全部分类</a>
+            <a href="#" class="cur">全部分类</a>
             <foreach name="cate" item="vo">
-                <a href="#" class="" >{$vo.name}</a>
+            <a href="#" class="">{$vo.name}</a>
             </foreach>
         </div>
         <div class="msba">
             排序：
-            <a href="#" class="cur" >总人气   </a>
-            <a href="#" class="" >浏览量   </a>
-            <a href="#" class="" >收藏数   </a>
-            <a href="#" class="" >推荐数   </a>
+            <a href="#" class="cur">总人气   </a>
+            <a href="#" class="">浏览量   </a>
+            <a href="#" class="">收藏数   </a>
+            <a href="#" class="">推荐数   </a>
         </div>
         <div class="cl h15"></div>
         <div class="lostxbo lostxbosm">
-
+            <div class="snntls df js">
+                <a href="#" class="">诗歌漫谈  </a>
+            </div>
             <div class="sgihmtan">
                 <ul>
                     <foreach name="ramble" item="vo">
@@ -37,16 +101,16 @@
                         <div class="datls">{$vo.title}</div>
                         <div class="df">
                             <div class="zuodat">
-                                <img src="images/shi3.png" alt="" />
+                                <img src="images/shi3.png" alt="">
                             </div>
                             <div class="youwnkw dc js">
                                 <div class="dwyonrs">
                                     {$vo.outline}
                                 </div>
-                                <a href="{:cmf_url('portal/Ramble/index',array('id'=>$vo['id']))}" class="dwnnru flex1" >阅读全文»</a>
+                                <a href="{:cmf_url('portal/Ramble/index',array('id'=>$vo['id']))}" class="dwnnru flex1">阅读全文»</a>
 
                                 <div class="co666">
-                                    分类： <span class="lan">{$vo.name} </span>
+                                    分类： <span class="lan">{$vo.name}</span>
                                     <br>发布于 {:date('Y-m-d H:i',$vo['published_time'])} 人气: {$vo.post_like}
                                 </div>
                             </div>
@@ -58,22 +122,21 @@
         </div>
         <div class="cl h33"></div>
         <div class="oages df ac js">
-            <a href="#" class="fema cur" ><em class="">< </em> 上一页 </a>
+            <a href="#" class="fema cur"><em class="">&lt; </em> 上一页 </a>
             <span class="">
-					<a href="#" class="pagesa cur" >1</a>
-					<a href="#" class="pagesa" >2</a>
-					<a href="#" class="pagesa" >3</a>
-					<a href="#" class="pagesa" >4</a>
-					<a href="#" class="pagesa" >5</a>
-					<a href="#" class="pagesa" >6</a>
-					<a href="#" class="pagesa" >7</a>
+					<a href="#" class="pagesa cur">1</a>
+					<a href="#" class="pagesa">2</a>
+					<a href="#" class="pagesa">3</a>
+					<a href="#" class="pagesa">4</a>
+					<a href="#" class="pagesa">5</a>
+					<a href="#" class="pagesa">6</a>
+					<a href="#" class="pagesa">7</a>
 				</span>
-            <a href="#" class="fema" > 下一页 <em class="">></em></a>
+            <a href="#" class="fema"> 下一页 <em class="">&gt;</em></a>
         </div>
         <div class="cl h33"></div>
     </div>
 </div>
-
 <include file="public@footer"/>
 </body>
 
