--- a/public/themes/simpleboot3/portal/ramshow/index.html
+++ b/public/themes/simpleboot3/portal/ramshow/index.html
@@ -7,16 +7,91 @@
 <body>
 <include file="public@nav"/>
 
-<div class="banner df jc ov">
-    <img src="images/subban1.png" alt="" />
-</div>
+<!--<div class="banner df jc ov">-->
+    <!--<img src="images/subban1.png" alt="" />-->
+<!--</div>-->
 
+<!--<div class="content flex1">-->
+    <!--<div class="inner">-->
+        <!--<div class="lostxbo">-->
+            <!--<div class="snntls">-->
+                <!--<a href="#" class="" >诗歌考典  </a>-->
+            <!--</div>-->
+
+            <!--<div class="sammnri df js">-->
+                <!--<div class="mantnr">-->
+                    <!--<div class="msantl">-->
+                        <!--【乐理与技巧】用奇异恩典练习泛音技巧-->
+                    <!--</div>-->
+                    <!--<div class="xluns">-->
+                        <!--<ul class="tutu">-->
+                            <!--<li><a href="#" class="" ><img src="__TMPL__/public/assets/images/xlun1.png" alt="" /></a></li>-->
+                            <!--<li><a href="#" class="" ><img src="__TMPL__/public/assets/images/xlun1.png" alt="" /></a></li>-->
+                            <!--<li><a href="#" class="" ><img src="__TMPL__/public/assets/images/xlun1.png" alt="" /></a></li>-->
+                            <!--<li><a href="#" class="" ><img src="__TMPL__/public/assets/images/xlun1.png" alt="" /></a></li>-->
+                            <!--<li><a href="#" class="" ><img src="__TMPL__/public/assets/images/xlun1.png" alt="" /></a></li>-->
+
+                        <!--</ul>-->
+                        <!--<div class="yuandian"></div>-->
+                    <!--</div>-->
+                <!--</div>-->
+
+                <!--<div class="yolsunf flex1">-->
+                    <!--<ul>-->
+                        <!--<li><a href="#" target="_blank">【乐理与技巧】用奇异恩典练习泛音技巧【乐理与技巧】用奇异恩典练习泛音技巧  </a></li>-->
+                        <!--<li><a href="#" target="_blank">【乐理与技巧】用奇异恩典练习泛音技巧【乐理与技巧】用奇异恩典练习泛音技巧  </a></li>-->
+                        <!--<li><a href="#" target="_blank">【乐理与技巧】用奇异恩典练习泛音技巧【乐理与技巧】用奇异恩典练习泛音技巧  </a></li>-->
+                        <!--<li><a href="#" target="_blank">【乐理与技巧】用奇异恩典练习泛音技巧【乐理与技巧】用奇异恩典练习泛音技巧  </a></li>-->
+                        <!--<li><a href="#" target="_blank">【乐理与技巧】用奇异恩典练习泛音技巧【乐理与技巧】用奇异恩典练习泛音技巧  </a></li>-->
+                        <!--<li><a href="#" target="_blank">【乐理与技巧】用奇异恩典练习泛音技巧【乐理与技巧】用奇异恩典练习泛音技巧  </a></li>-->
+                        <!--<li><a href="#" target="_blank">【乐理与技巧】用奇异恩典练习泛音技巧【乐理与技巧】用奇异恩典练习泛音技巧  </a></li>-->
+                        <!--<li><a href="#" target="_blank">【乐理与技巧】用奇异恩典练习泛音技巧【乐理与技巧】用奇异恩典练习泛音技巧  </a></li>-->
+                        <!--<li><a href="#" target="_blank">【乐理与技巧】用奇异恩典练习泛音技巧【乐理与技巧】用奇异恩典练习泛音技巧  </a></li>-->
+                        <!--<li><a href="#" target="_blank">【乐理与技巧】用奇异恩典练习泛音技巧【乐理与技巧】用奇异恩典练习泛音技巧  </a></li>-->
+                    <!--</ul>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
+
+        <!--<div class="lostxbo">-->
+            <!--<div class="snntls df js">-->
+                <!--<a href="#" class="" >诗歌漫谈  </a>-->
+                <!--<a href="{:cmf_url('portal/Ramlist/index')}" class="morennsg">更多 <span class="songti">&gt;&gt;</span></a>-->
+            <!--</div>-->
+
+            <!--<div class="sgihmtan">-->
+                <!--<ul>-->
+                    <!--<foreach name="ramble" item="v">-->
+                    <!--<li>-->
+                        <!--<div class="datls">{$v.title}</div>-->
+                        <!--<div class="df">-->
+                            <!--<div class="zuodat">-->
+                                <!--<img src="images/shi3.png" alt="" />-->
+                            <!--</div>-->
+                            <!--<div class="youwnkw dc js">-->
+                                <!--<div class="dwyonrs">-->
+                                    <!--{$v.outline}-->
+                                <!--</div>-->
+                                <!--<a href="{:cmf_url('portal/Ramble/index',array('id'=>$v['id']))}" class="dwnnru flex1" >阅读全文»</a>-->
+
+                                <!--<div class="co666">-->
+                                    <!--分类： <span class="lan">{$v.name} </span>-->
+                                    <!--<br>发布于 {:date('Y-m-d H:i',$v['published_time'])} 人气: {$v.post_like}-->
+                                <!--</div>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                    <!--</li>-->
+                    <!--</foreach>-->
+                <!--</ul>-->
+            <!--</div>-->
+        <!--</div>-->
+
+    <!--</div>-->
+<!--</div>-->
 <div class="content flex1">
     <div class="inner">
         <div class="lostxbo">
-            <div class="snntls">
-                <a href="#" class="" >诗歌考典  </a>
-            </div>
+
 
             <div class="sammnri df js">
                 <div class="mantnr">
@@ -25,70 +100,145 @@
                     </div>
                     <div class="xluns">
                         <ul class="tutu">
-                            <li><a href="#" class="" ><img src="__TMPL__/public/assets/images/xlun1.png" alt="" /></a></li>
-                            <li><a href="#" class="" ><img src="__TMPL__/public/assets/images/xlun1.png" alt="" /></a></li>
-                            <li><a href="#" class="" ><img src="__TMPL__/public/assets/images/xlun1.png" alt="" /></a></li>
-                            <li><a href="#" class="" ><img src="__TMPL__/public/assets/images/xlun1.png" alt="" /></a></li>
-                            <li><a href="#" class="" ><img src="__TMPL__/public/assets/images/xlun1.png" alt="" /></a></li>
+                            <li><a href="#" class=""><img src="__TMPL__/public/assets/images/xlun1.png" alt=""></a></li>
+                            <li><a href="#" class=""><img src="__TMPL__/public/assets/images/xlun1.png" alt=""></a></li>
+                            <li><a href="#" class=""><img src="__TMPL__/public/assets/images/xlun1.png" alt=""></a></li>
+                            <li><a href="#" class=""><img src="__TMPL__/public/assets/images/xlun1.png" alt=""></a></li>
+                            <li><a href="#" class=""><img src="__TMPL__/public/assets/images/xlun1.png" alt=""></a></li>
 
-                        </ul>
-                        <div class="yuandian"></div>
+                            <div class="yuandian"></div>
                     </div>
                 </div>
 
                 <div class="yolsunf flex1">
                     <ul>
-                        <li><a href="#" target="_blank">【乐理与技巧】用奇异恩典练习泛音技巧【乐理与技巧】用奇异恩典练习泛音技巧  </a></li>
-                        <li><a href="#" target="_blank">【乐理与技巧】用奇异恩典练习泛音技巧【乐理与技巧】用奇异恩典练习泛音技巧  </a></li>
-                        <li><a href="#" target="_blank">【乐理与技巧】用奇异恩典练习泛音技巧【乐理与技巧】用奇异恩典练习泛音技巧  </a></li>
-                        <li><a href="#" target="_blank">【乐理与技巧】用奇异恩典练习泛音技巧【乐理与技巧】用奇异恩典练习泛音技巧  </a></li>
-                        <li><a href="#" target="_blank">【乐理与技巧】用奇异恩典练习泛音技巧【乐理与技巧】用奇异恩典练习泛音技巧  </a></li>
-                        <li><a href="#" target="_blank">【乐理与技巧】用奇异恩典练习泛音技巧【乐理与技巧】用奇异恩典练习泛音技巧  </a></li>
-                        <li><a href="#" target="_blank">【乐理与技巧】用奇异恩典练习泛音技巧【乐理与技巧】用奇异恩典练习泛音技巧  </a></li>
-                        <li><a href="#" target="_blank">【乐理与技巧】用奇异恩典练习泛音技巧【乐理与技巧】用奇异恩典练习泛音技巧  </a></li>
-                        <li><a href="#" target="_blank">【乐理与技巧】用奇异恩典练习泛音技巧【乐理与技巧】用奇异恩典练习泛音技巧  </a></li>
-                        <li><a href="#" target="_blank">【乐理与技巧】用奇异恩典练习泛音技巧【乐理与技巧】用奇异恩典练习泛音技巧  </a></li>
+
+                        <li>
+                            <a href="#" class="yolsunf-1 hoverimg" ><img src="__TMPL__/public/assets/images/xtuz.png" alt="" /></a>
+                            <div class="yolsunf-2">
+                                <a href="#" class="yolsunf-2-1" >尽心敬拜（一）</a>
+                                <div class="yolsunf-2-2">
+                                    玛拉基这名字是指「我的使者」。先知是神的使者，神借着先知宣告祂对子民的责备和应许
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <a href="#" class="yolsunf-1" ><img src="__TMPL__/public/assets/images/xtuz.png" alt="" /></a>
+                            <div class="yolsunf-2">
+                                <a href="#" class="yolsunf-2-1" >尽心敬拜（一）</a>
+                                <div class="yolsunf-2-2">
+                                    玛拉基这名字是指「我的使者」。先知是神的使者，神借着先知宣告祂对子民的责备和应许
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <a href="#" class="yolsunf-1" ><img src="__TMPL__/public/assets/images/xtuz.png" alt="" /></a>
+                            <div class="yolsunf-2">
+                                <a href="#" class="yolsunf-2-1" >尽心敬拜（一）</a>
+                                <div class="yolsunf-2-2">
+                                    玛拉基这名字是指「我的使者」。先知是神的使者，神借着先知宣告祂对子民的责备和应许
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <a href="#" class="yolsunf-1" ><img src="__TMPL__/public/assets/images/xtuz.png" alt="" /></a>
+                            <div class="yolsunf-2">
+                                <a href="#" class="yolsunf-2-1" >尽心敬拜（一）</a>
+                                <div class="yolsunf-2-2">
+                                    玛拉基这名字是指「我的使者」。先知是神的使者，神借着先知宣告祂对子民的责备和应许
+                                </div>
+                            </div>
+                        </li>
+
                     </ul>
                 </div>
             </div>
         </div>
 
-        <div class="lostxbo">
-            <div class="snntls df js">
-                <a href="#" class="" >诗歌漫谈  </a>
-                <a href="{:cmf_url('portal/Ramlist/index')}" class="morennsg">更多 <span class="songti">&gt;&gt;</span></a>
-            </div>
+        <div class="cl"></div>
+        <div class="shigsz">
+            <div class="lostxbo">
+                <div class="snntls df js">
+                    <a href="#" class="">诗歌漫谈  </a>
+                    <a href="{:cmf_url('portal/Ramlist/index')}" class="morennsg">更多 <span class="songti">&gt;&gt;</span></a>
+                </div>
 
-            <div class="sgihmtan">
-                <ul>
-                    <foreach name="ramble" item="v">
-                    <li>
-                        <div class="datls">{$v.title}</div>
-                        <div class="df">
-                            <div class="zuodat">
-                                <img src="images/shi3.png" alt="" />
-                            </div>
-                            <div class="youwnkw dc js">
-                                <div class="dwyonrs">
-                                    {$v.outline}
+                <div class="sgihmtan">
+                    <ul>
+                        <foreach name="ramble" item="v">
+                        <li>
+                            <div class="datls">{$v.title}</div>
+                            <div class="df">
+                                <div class="zuodat">
+                                    <img src="__TMPL__/public/assets/images/shi3.png" alt="">
                                 </div>
-                                <a href="{:cmf_url('portal/Ramble/index',array('id'=>$v['id']))}" class="dwnnru flex1" >阅读全文»</a>
+                                <div class="youwnkw dc js">
+                                    <div class="dwyonrs">
+                                        {$v.outline}
+                                    </div>
+                                    <a href="{:cmf_url('portal/Ramble/index',array('id'=>$v['id']))}" class="dwnnru flex1">阅读全文»</a>
 
-                                <div class="co666">
-                                    分类： <span class="lan">{$v.name} </span>
-                                    <br>发布于 {:date('Y-m-d H:i',$v['published_time'])} 人气: {$v.post_like}
+                                    <div class="co666">
+                                        分类： <span class="lan">敬拜学 </span>
+                                        <br>发布于 {:date('Y-m-d H:i',$v['published_time'])} 人气: {$v.post_like}
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    </li>
-                    </foreach>
-                </ul>
+                        </li>
+                        </foreach>
+                    </ul>
+                </div>
             </div>
         </div>
+        <div class="shihgy">
+            <div class="lostxbo">
+                <div class="snntls df js">
+                    <a href="#aaa" class="">诗歌颂唱  </a>
+
+                </div>
+                <div class="dianjwz qemcin cur" style="display: block;">
+                    <ul class="dwmst">
+                        <li><a href="#" class="" >使徒与殉道者护        </a></li>
+                        <li><a href="#" class="" >教士和教父            </a></li>
+                        <li><a href="#" class="" >宗教改革与敬虔        </a></li>
+                        <li><a href="#" class="" >运动奥秘与生命复兴的水</a></li>
+                        <li><a href="#" class="" >流海外宣教运动与福音  </a></li>
+                        <li><a href="#" class="" >派弟兄运动的          </a></li>
+                        <li><a href="#" class="" >恢复内里生命派        </a></li>
+                        <li><a href="#" class="" >西教士在中国          </a></li>
+                        <li><a href="#" class="" >西教士在中国          </a></li>
+                        <li><a href="#" class="" >西教士在中国          </a></li>
+                    </ul>
+                </div>
+
+            </div>
+            <div class="lostxbo">
+                <div class="snntls df js">
+                    <a href="#aaa" class="">诗歌史话  </a>
+
+                </div>
+                <div class="dianjwz qemcin cur" style="display: block;">
+                    <ul class="dwmst">
+                        <li><a href="#" class="" >使徒与殉道者护        </a></li>
+                        <li><a href="#" class="" >教士和教父            </a></li>
+                        <li><a href="#" class="" >宗教改革与敬虔        </a></li>
+                        <li><a href="#" class="" >运动奥秘与生命复兴的水</a></li>
+                        <li><a href="#" class="" >流海外宣教运动与福音  </a></li>
+                        <li><a href="#" class="" >派弟兄运动的          </a></li>
+                        <li><a href="#" class="" >恢复内里生命派        </a></li>
+                        <li><a href="#" class="" >西教士在中国          </a></li>
+                        <li><a href="#" class="" >西教士在中国          </a></li>
+                        <li><a href="#" class="" >西教士在中国          </a></li>
+                    </ul>
+                </div>
+
+            </div>
+
+        </div>
+        <div class="cl"></div>
 
     </div>
 </div>
-
 <include file="public@footer"/>
 </body>
 
